--- a/index.org
+++ b/index.org
@@ -60,7 +60,7 @@ for the code block below to the tag of your last published version.
 #+END_COMMENT
 
 #+HTML: <ul>
-#+BEGIN_SRC shell :exports results :results value html :var TAG='v0.0'
+#+BEGIN_SRC shell :exports results :results value html :var TAG="v0.0"
 RES=`git log $TAG...HEAD --pretty="<li>%s</li>" -- *.org`
 if [ -z $RES ]; then
   RES="<li>no changes</li>"
@@ -70,7 +70,7 @@ echo $RES
 
 #+RESULTS:
 #+BEGIN_HTML
-<li>no changes</li>
+<li>add footnote example, use macro for publication date</li>
 #+END_HTML
 
 #+HTML: </ul>
